test/algeff/wrong/eff-rec3.kk.out
test/algeff/wrong/eff-rec3.kk(7,23): error: invalid syntax
 unexpected '(': local parameters are no longer supported, use a local 'var' instead